--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             <h3 class="animation-name">showAndHide</h3>
             <button class="button" id="showAndHidePlay">Play</button>
         </header>
-        <div class="block" id="showAndHideBlock"></div>
+        <div class="block hide" id="showAndHideBlock"></div>
     </div>
     <div class="container">
         <header class="container-header">
             <h3 class="animation-name">heartBeating</h3>
             <button class="button" id="heartBeatingPlay">Play</button>
+            <button class="button" id="heartBeatingStop">Stop</button>
         </header>
         <div class="block" id="heartBeatingBlock"></div>
     </div>
-
 
     <script src="index.js"></script>
 </body>
