--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <header class="container-header">
             <h3 class="animation-name">fadeIn</h3>
             <button class="button" id="fadeInPlay">Play</button>
-            <button class="button" id="fadeInReset">Reset</button>
         </header>
         <div class="block hide" id="fadeInBlock"></div>
     </div>
@@ -18,7 +17,6 @@
         <header class="container-header">
             <h3 class="animation-name">fadeOut</h3>
             <button class="button" id="fadeOutPlay">Play</button>
-            <button class="button" id="fadeOutReset">Reset</button>
         </header>
         <div class="block" id="fadeOutBlock"></div>
     </div>
@@ -26,7 +24,6 @@
         <header class="container-header">
             <h3 class="animation-name">move</h3>
             <button class="button" id="movePlay">Play</button>
-            <button class="button" id="moveReset">Reset</button>
         </header>
         <div class="block" id="moveBlock"></div>
     </div>
@@ -34,7 +31,6 @@
         <header class="container-header">
             <h3 class="animation-name">scale</h3>
             <button class="button" id="scalePlay">Play</button>
-            <button class="button" id="scaleReset">Reset</button>
         </header>
         <div class="block" id="scaleBlock"></div>
     </div>
@@ -45,6 +41,7 @@
         <header class="container-header">
             <h3 class="animation-name">moveAndHide</h3>
             <button class="button" id="moveAndHidePlay">Play</button>
+            <button class="button" id="moveAndHideReset">Reset</button>
         </header>
         <div class="block" id="moveAndHideBlock"></div>
     </div>
@@ -53,7 +50,7 @@
             <h3 class="animation-name">showAndHide</h3>
             <button class="button" id="showAndHidePlay">Play</button>
         </header>
-        <div class="block hide" id="showAndHideBlock"></div>
+        <div class="block" id="showAndHideBlock"></div>
     </div>
     <div class="container">
         <header class="container-header">
